# loka

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.githooks/: pre-commit
.github/: SECRETS.md
.github/workflows/: ci.yml  docker-inference.yml  docker-train.yml
configs/: grpo_config.yaml  train_config.yaml
docker/: Dockerfile  Dockerfile.inference  Dockerfile.rl  docker-compose.yml
docs/: simulation-stack-decision.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  contracts.ts  mockSimulationApi.ts
frontend/src/catalog/: solarCatalog.ts
frontend/src/components/: EventFeed.tsx  MissionTimeline.tsx  PromptConsole.tsx  SolarSystemScene.tsx  TelemetryPanel.tsx
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  training-job-rl.yaml  training-job.yaml
scripts/: download_ephemeris.py  generate_training_data.py  install-hooks.sh  setup-branch-protection.sh  train.py  train.slurm  train_grpo.slurm  train_grpo_native.slurm  train_grpo_pyxis.slurm
src/loka/: __init__.py  cli.py
src/loka/agent/: __init__.py  base.py
src/loka/astro/: __init__.py  coordinates.py  ephemeris.py  hohmann.py
src/loka/envs/: __init__.py  orbital_transfer.py
src/loka/model/: __init__.py  loka_model.py
src/loka/rl/: __init__.py  bridge.py  checkpoint.py  curriculum.py  evaluation.py  metrics.py  reward.py
src/loka/tools/: __init__.py  base.py  ephemeris_tool.py  trajectory_tool.py
tests/: __init__.py  test_coordinates.py  test_integration.py  test_orbital_env.py  test_tools.py
